--- a/src/components/css/searchbar.css
+++ b/src/components/css/searchbar.css
@@ -54,7 +54,7 @@ input::placeholder {
 } */
 
 .container-one {
-  height: 50vh;
+  height: 400px;
 }
 
 form {
