--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 body {
   font-family: "Nunito", sans-serif;
   background-color: #0f0f0f;
+  /* edit */
+  height: 100vh;
 }
 
 code {
